--- a/.github/workflows/work-1.yml
+++ b/.github/workflows/work-1.yml
@@ -16,10 +16,6 @@ jobs:
       tag_name: ${{ steps.create_tag.outputs.new_tag }}
     steps:
       - uses: actions/checkout@v4
-      - name: private_html create
-        env: 
-          NO_HTML: ${{ secrets.PRIVATE_HTML }}
-        run: echo "$NO_HTML" > src/private.html
       - name: Create Tag
         id: create_tag
         uses: mathieudutour/github-tag-action@v6.2
@@ -42,6 +38,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: private_html 생성
+        env: 
+          NO_HTML: ${{ secrets.PRIVATE_HTML }}
+        run: echo "$NO_HTML" > src/private.html
       - name: Docker Buildx 설치
         uses: docker/setup-buildx-action@v2
       - name: 레지스트리 로그인
